// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update accordion item drops size from nested items and leaves a TODO comment (#13823): test.html 1`] = `
{
  "0. Before": "
                <tui-accordion>
                    <tui-accordion-item size="s">
                        First
                        <ng-template tuiAccordionItemContent>One</ng-template>
                    </tui-accordion-item>
                    <tui-accordion-item [size]="size">
                        Second
                        <ng-template tuiAccordionItemContent>Two</ng-template>
                    </tui-accordion-item>
                </tui-accordion>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-accordion-item has been removed. Use new tuiAccordion instead. See example https://taiga-ui.dev/components/accordion -->
<tui-accordion>
                    <!-- TODO: (Taiga UI migration) \`size\` was removed from individual accordion items; set it on the parent <tui-accordion size="..."> instead. See https://taiga-ui.dev/components/accordion -->
                    <button tuiAccordion>First</button>
                    <tui-expand>One</tui-expand>
                    <!-- TODO: (Taiga UI migration) \`size\` was removed from individual accordion items; set it on the parent <tui-accordion size="..."> instead. See https://taiga-ui.dev/components/accordion -->
                    <button tuiAccordion>Second</button>
                    <tui-expand>Two</tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item drops size from nested items and leaves a TODO comment (#13823): test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item migrates nested accordion items: test.html 1`] = `
{
  "0. Before": "
                <tui-accordion>
                    <tui-accordion-item [open]="true">
                        Level 1
                        <ng-template tuiAccordionItemContent>
                            Development kit consisting of the low level tools and
                            abstractions used to develop Taiga UI Angular entities

                            <tui-accordion>
                                <tui-accordion-item
                                    borders="top-bottom"
                                    class="some"
                                    [open]="true"
                                >
                                    Level 2
                                    <ng-template tuiAccordionItemContent>
                                        The main set of components used to build Taiga UI
                                        based Angular applications

                                        <tui-accordion>
                                            <tui-accordion-item [open]="true">
                                                Level 3
                                                <ng-template tuiAccordionItemContent>
                                                    Basic elements needed to develop
                                                    components, directives and more using
                                                    Taiga UI design system
                                                </ng-template>
                                            </tui-accordion-item>
                                        </tui-accordion>
                                    </ng-template>
                                </tui-accordion-item>
                            </tui-accordion>
                        </ng-template>
                    </tui-accordion-item>
                </tui-accordion>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-accordion-item has been removed. Use new tuiAccordion instead. See example https://taiga-ui.dev/components/accordion -->
<tui-accordion>
                    <button [tuiAccordion]="true">Level 1</button>
                    <tui-expand>
                        Development kit consisting of the low level tools and
                        abstractions used to develop Taiga UI Angular entities

                        <tui-accordion>
                            <button [tuiAccordion]="true">Level 2</button>
                            <tui-expand class="some">
                                The main set of components used to build Taiga UI
                                based Angular applications

                                <tui-accordion>
                                    <button [tuiAccordion]="true">Level 3</button>
                                    <tui-expand>
                                        Basic elements needed to develop components, directives and more using Taiga UI design system
                                    </tui-expand>
                                </tui-accordion>
                            </tui-expand>
                        </tui-accordion>
                    </tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item migrates nested accordion items: test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item migrates standalone tui-expand content template: test.html 1`] = `
{
  "0. Before": "
                <tui-expand [expanded]="expanded">
                    <ng-template tuiExpandContent>
                        <p>NOBODY expects the Spanish Inquisition!</p>
                    </ng-template>
                </tui-expand>
            ",
  "1. After": "
                <tui-expand [expanded]="expanded">
                    <ng-template tuiItem>
                        <p>NOBODY expects the Spanish Inquisition!</p>
                    </ng-template>
                </tui-expand>
            ",
}
`;

exports[`ng-update accordion item migrates standalone tui-expand content template: test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item moves bound [size] from a standalone item onto the generated tui-accordion (#13823): test.html 1`] = `
{
  "0. Before": "
                <tui-accordion-item [size]="size">
                    Header
                    <ng-template tuiAccordionItemContent>Content</ng-template>
                </tui-accordion-item>
            ",
  "1. After": "
                <tui-accordion [size]="size">
                    <button tuiAccordion>Header</button>
                    <tui-expand>
                        <ng-container *tuiItem>Content</ng-container>
                    </tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item moves bound [size] from a standalone item onto the generated tui-accordion (#13823): test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item moves size from a standalone item onto the generated tui-accordion (#13823): test.html 1`] = `
{
  "0. Before": "
                <tui-accordion-item size="s">
                    Header
                    <ng-template tuiAccordionItemContent>Content</ng-template>
                </tui-accordion-item>
            ",
  "1. After": "
                <tui-accordion size="s">
                    <button tuiAccordion>Header</button>
                    <tui-expand>
                        <ng-container *tuiItem>Content</ng-container>
                    </tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item moves size from a standalone item onto the generated tui-accordion (#13823): test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item removes deprecated [rounded] attribute from tui-accordion: test.html 1`] = `
{
  "0. Before": "
                <tui-accordion [rounded]="false">
                    <tui-accordion-item [open]="true">
                        Output

                        <ng-template tuiAccordionItemContent>
                            <pre><code>{{ group.value | json }}</code></pre>
                        </ng-template>
                    </tui-accordion-item>
                </tui-accordion>

                <tui-accordion rounded="false">
                    <tui-accordion-item>
                        Item
                        <ng-template tuiAccordionItemContent>Content</ng-template>
                    </tui-accordion-item>
                </tui-accordion>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-accordion-item has been removed. Use new tuiAccordion instead. See example https://taiga-ui.dev/components/accordion -->
<!-- TODO: (Taiga UI migration) rounded input has been removed. The previous rounded look can still be achieved with CSS. See example https://taiga-ui.dev/components/accordion#custom -->
<tui-accordion >
                    <button [tuiAccordion]="true">Output</button>
                    <tui-expand><pre><code>{{ group.value | json }}</code></pre></tui-expand>
                </tui-accordion>

                <!-- TODO: (Taiga UI migration) tui-accordion-item has been removed. Use new tuiAccordion instead. See example https://taiga-ui.dev/components/accordion -->
<!-- TODO: (Taiga UI migration) rounded input has been removed. The previous rounded look can still be achieved with CSS. See example https://taiga-ui.dev/components/accordion#custom -->
<tui-accordion >
                    <button tuiAccordion>Item</button>
                    <tui-expand>Content</tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item removes deprecated [rounded] attribute from tui-accordion: test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;

exports[`ng-update accordion item replaces standalone accordion item with new structure: test.html 1`] = `
{
  "0. Before": "
                <tui-accordion-item>
                    Taiga UI lazy
                    <ng-template tuiAccordionItemContent>I'm lazy content</ng-template>
                </tui-accordion-item>

                <tui-accordion-item>
                    Taiga UI eager
                    <div tuiAccordionItemContent>I'm eager content</div>
                </tui-accordion-item>
            ",
  "1. After": "
                <tui-accordion>
                    <button tuiAccordion>Taiga UI lazy</button>
                    <tui-expand>
                        <ng-container *tuiItem>I'm lazy content</ng-container>
                    </tui-expand>
                </tui-accordion>

                <tui-accordion>
                    <button tuiAccordion>Taiga UI eager</button>
                    <tui-expand>I'm eager content</tui-expand>
                </tui-accordion>
            ",
}
`;

exports[`ng-update accordion item replaces standalone accordion item with new structure: test.ts 1`] = `
{
  "0. Before": "
            import {TuiAccordion} from '@taiga-ui/experimental';

            @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
  "1. After": "import { TuiAccordion } from "@taiga-ui/kit";

                        @Component({
                templateUrl: './test.html',
                imports: [TuiAccordion],
            })
            export class TestComponent {}
        ",
}
`;
